Migration to Spring Boot 3